--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 /* TODO: consider creating <Button> and <GradientText> components */
+
 a,
 .btn {
   @apply transition-colors duration-200;
@@ -8,5 +9,5 @@ a,
 
 .gradient-text {
   @apply bg-clip-text text-transparent;
-  @apply bg-gradient-to-br from-indigo-500 via-fuchsia-500 to-pink-500;
+  @apply bg-gradient-to-r from-amber-200 to-yellow-400;
 }
