--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -1,26 +1,112 @@
 ---
-export interface Props {
-  id: string;
-  title: string;
-}
+import { Image } from "astro:assets";
+import ImgEx1 from "~/assets/bybit.svg";
+import ImgEx2 from "~/assets/okx-dex.svg";
+import ImgEx3 from "~/assets/bitget.svg";
+import ImgEx4 from "~/assets/bitmart.svg";
+import ImgEx5 from "~/assets/lbank.svg";
+import ImgEx6 from "~/assets/htx.svg";
+import ImgEx7 from "~/assets/mexc.svg";
+import ImgEx8 from "~/assets/poloniex.svg";
+import ImgEx9 from "~/assets/woox.webp";
+import ImgEx10 from "~/assets/bitrue.png";
+import ImgEx11 from "~/assets/gate.png";
+import ImgEx13 from "~/assets/pinksale.png";
 
-const { title, id } = Astro.props;
+
+const widths = [250, 500];
+const sizes = "(min-width: 250px) 36vw, 56vw";
 ---
+<style>
+  p {
+    font-size: 12px;
+  }
+</style>
+
 
 <section
-  id={id}
-  class="flex scroll-mt-24 flex-col items-center gap-4 space-y-8"
+  class="container flex flex-col h-[full] items-center justify-center sm:mx-auto"
 >
-  <div class="flex flex-col items-center gap-4">
-    <slot name="eyebrow" />
-    <h2
-      class="gradient-text text-center font-extrabold tracking-tight text-6xl"
-    >
-      {title}
-    </h2>
+
+  <div class="w-full h-20">
+
   </div>
-  <p class="max-w-xl text-center font-extrabold text-2xl">
-    <slot name="lead" />
-  </p>
-  <slot />
+
+  <article class="w-full h-40 p-2 text-center text-base md:text-lg text-slate-200 font-bold sm:mb-12 md:mb-12">
+    <h3 class="flex justify-center text-4xl md:text-6xl font-bold p-6 md:mb-5">
+      TRADE NOW:
+    </h3>
+    RUDY is available on the next exchanges:   
+  </article>
+
+  <div class="grid grid-cols-2 grid-rows-2 md:grid-cols-3 md:grid-rows-4 gap-4 lg:gap-6 w-11/12 lg:w-9/12 [&>div]:h-24 md:[&>div]:h-28 lg:[&>div]:h-32 [&>div]:bg-stone-900 [&>div]:border-4 [&>div]:rounded-md [&>div]:border-slate-400 [&>div>a]:flex-col [&>div>a]:w-full [&>div>a]:flex [&>div>a]:items-center [&>div>a]:justify-center [&>div>a]:gap-3 [&>div>a]:px-6 [&>div>a]:py-4 mt-5 md:mt-12">
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://www.pinksale.finance/" >
+        <Image src={ImgEx13} class="w-10/12 lg:w-11/12" alt="PinkSale logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" class="flex items-center justify-center">
+        <Image src={ImgEx1} class="md:w-5/12" alt="Bybit logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" class="">
+        <Image src={ImgEx2} class="w-5/12" alt="Okx logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx3} class="w-7/12" alt="Bitget logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx4} class="w-7/12" alt="Bitmart logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx5} class="w-6/12" alt="Lbank logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-50 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx6} class="w-7/12 lg:w-8/12" alt="Htx logo">
+      </a>
+    </div>
+    <div class="flex flex- transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx7} class="w-7/12 lg:w-8/12" alt="Mexc logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx8} class="w-8/12 lg:w-9/12" alt="Poloniex logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx9} class="w-7/12 lg:w-8/12" alt="Woox logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx10} class="w-7/12 lg:w-8/12" alt="Bitrue logo">
+      </a>
+    </div>
+    <div class="flex flex-grow transition duration-500 ease-in-out hover:bg-slate-400 transform hover:-translate-y-1 hover:scale-110">
+      <a href="https://phantom.app/" >
+        <Image src={ImgEx11} class="w-7/12 lg:w-8/12" alt="Gate io logo">
+      </a>
+    </div>
+  </div>
+  
+  <h3 class="flex justify-center text-xl font-bold p-6 mt-8 mb-14">
+    More listings are on the way, stay tuned!
+  </h3>
+  <div class="w-full h-10 md-h-20">
+
+  </div>
+
 </section>
