--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,47 +1,195 @@
 ---
 import { Image } from "astro:assets";
+import heroImage from "~/assets/rud-hero.png";
 import { Icon } from "astro-icon/components";
-import astronautImage from "~/assets/astronaut.png";
-import HeroImage from "~/components/hero-image.astro";
-import Starfield from "~/components/starfield.astro";
-import GitHubCorner from "./github-corner.astro";
+import type { FooterLink } from "~/types";
 
-const widths = [450, 800];
-const sizes = "(min-width: 640px) 42vw, 67vw";
+const widths = [250, 500];
+const sizes = "(min-width: 250px) 36vw, 56vw"; 
+
+const links: Array<FooterLink> = [
+  {
+    url: "https://web.telegram.org/a/#-1002224984232",
+    description: "$MONROE Telegram",
+    icon: "fa-brands:telegram",
+  },
+  {
+    url: "https://x.com/MonroeonSol",
+    description: "$MONROE on Sol on Twitter",
+    icon: "fa-brands:twitter",
+  },
+  {
+    url: "https://x.com/MonroeonSol",
+    description: "$MONROE on Sol on Twitter",
+    icon: "fa-brands:instagram",
+  }
+];
 ---
+<style>
+h1, p, a, article {
+  font-family: "Permanent Marker", cursive;
+}
+@media (max-width: 640px) {
+  /* CSS styles for screens smaller than or equal to 640px */
+  section {
+      height: fit-content;
+    }
+}
+@media (min-width: 640px) {
+  /* CSS styles for screens larger than or equal to 640px */
+  section {
+    height: 100%;
+  }
+}
 
-<section class="relative h-full bg-black">
-  <Starfield />
-  <GitHubCorner />
-  <div id="splash-bg-fallback" class="absolute inset-0 hidden opacity-40">
-    <HeroImage />
-  </div>
-  <div class="relative grid h-full place-items-center sm:grid-cols-2">
-    <h2
-      class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end"
-    >
-      <Icon name="logomark" class="size-20 text-white md:size-32" />
-      <div
-        class="gradient-text text-center font-extrabold tracking-tighter text-6xl md:text-8xl"
+</style>
+
+<section class="relative w-screen h-full bg-black overflow-hidden">
+  
+  
+  <div class="container mx-auto grid w-full h-screen place-items-center">
+    
+      <article
+        class="flex flex-col w-12/12 text-center gap-2 sm:gap-4 md:gap-0 sm:justify-self-center sm:mx-auto"
       >
-        Build fast
-        <br /> websites,
-        <br /> faster.
+          <div
+          id="signature"
+          class="w-full max-w-11/12 h-full self-center sm:self-auto sm:justify-self-center p-5 md:p-0 [&>h1]:text-white [&>p]:text-white"
+        >
+            <h1 class="text-5xl sm:text-6xl lg:text-9xl font-bold p-10">$RUDY</h1>
+            <p class="pb-5">Powered by X chain</p>
+          </div>
+            <div
+              class="text-white font-bold tracking-tighter text-lg sm:text-xl md:text-2xl mx-5 pb-14"
+            >
+              <p class="w-10/12 sm:w-6/12 m-auto md:hidden">
+              Who is?<span class="text-primary"> Rudy</span> <br> Is a degen meme fuckr <span class="text-primary">$Rudy</span> ready to conquer the BNB Network.
+              </p>
+            </div>
+      </article>
+
+      <div class="md:hidden md:w-full sm:p-3 md:align-bottom my-auto">
+        
+        <div class="grid grid-cols-1 grid-rows-2 sm:flex place-content-center place-items-center w-full h-40 sm:mb-0">
+          
+
+          <button class="w-40 sm:w-44 h-16 bg-gradient-to-r from-blue-800 to-indigo-900 text-xl text-white font-bold rotate-12 transition duration-500 ease-in-out hover:border transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md mt-10 mb-14 sm:mr-10">
+            BUY RUDY
+          </button>
+          
+          <ul class="relative grid grid-cols-3 gap-x-8 sm:grid-cols-3">
+            <li>
+              <a
+                    class="flex size-14 items-center justify-center rounded p-3 bg-gradient-to-r from-blue-800 to-indigo-900 -rotate-6 transition duration-500 ease-in-out hover:border hover:bg-slate-600 transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md"
+                    href="#" target="_blank" rel="noopener noreferrer"
+                  >
+                    <span class="sr-only">Description</span>
+                    <Icon class="size-full text-white" name={"fa-brands:twitter"} />
+              </a>
+            </li>
+            <li>
+              <a
+              class="flex size-14 items-center justify-center rounded p-3 bg-gradient-to-r from-blue-800 to-indigo-900 rotate-3 transition duration-500 ease-in-out hover:border hover:bg-slate-600 transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md"
+              href="#" target="_blank" rel="noopener noreferrer"
+            >
+              <span class="sr-only">Description</span>
+              <Icon class="size-full text-white" name={"fa-brands:telegram"} />
+              </a>
+            </li>
+            <li>
+              <a
+              class="flex size-14 items-center justify-center rounded p-3 bg-gradient-to-r from-blue-800 to-indigo-900 rotate-6 transition duration-500 ease-in-out hover:border hover:bg-slate-600 transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md"
+              href="#" target="_blank" rel="noopener noreferrer"
+            > 
+              <span class="sr-only">Description</span>
+              <Icon class="size-full text-white" name={"fa-brands:instagram"} />
+              </a>
+            </li>
+          </ul>
+        </div>
+        
       </div>
-    </h2>
-    <div
-      id="astronaut"
-      class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
-    >
-      <Image
-        class="h-full w-full object-cover"
-        src={astronautImage}
-        widths={widths}
-        sizes={sizes}
-        loading="eager"
-        alt="A floating astronaut in a space suit"
-      />
-    </div>
+      
+      
+      <div class="hidden md:grid md:grid-cols-2 md:grid-rows-1 md:w-full md:h-1/2 lg:h-3/4 md:self-end md:align-bottom my-auto sm:p-3 md:p-0 md:m-0 mb-0">
+
+        
+        <div class="align-middle m-auto">
+            <!--Buttons -->
+            <div class="hidden md:flex w-full h-1/2 sm:justify-center sm:align-middle">
+              
+              <ul class="relative grid grid-cols-3 gap-x-8 md:gap-x-2 sm:grid-cols-3 md:[&>li>a]:size-12 lg:[&>li>a]:size-16 md:pr-4">
+                <li>
+                  <a
+                        class="flex size-14 items-center justify-center rounded p-3 bg-gradient-to-r from-blue-800 to-indigo-900 -rotate-6 transition duration-500 ease-in-out hover:bg-slate-600 hover:border transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md"
+                        href="#" target="_blank" rel="noopener noreferrer"
+                      >
+                        <span class="sr-only">Description</span>
+                        <Icon class="size-full text-white" name={"fa-brands:twitter"} />
+                  </a>
+                </li>
+                <li>
+                  <a
+                  class="flex size-14 items-center justify-center rounded p-3 bg-gradient-to-r from-blue-800 to-indigo-900 rotate-3 transition duration-500 ease-in-out hover:bg-slate-600 hover:border transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md"
+                  href="#" target="_blank" rel="noopener noreferrer"
+                >
+                  <span class="sr-only">Description</span>
+                  <Icon class="size-full text-white" name={"fa-brands:telegram"} />
+                  </a>
+                </li>
+                <li>
+                  <a
+                  class="flex size-14 items-center justify-center rounded p-3 md:mr-2 lg:mr-6 bg-gradient-to-r from-blue-800 to-indigo-900 rotate-6 transition duration-500 ease-in-out hover:bg-slate-600 hover:border transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md"
+                  href="#" target="_blank" rel="noopener noreferrer"
+                > 
+                  <span class="sr-only">Description</span>
+                  <Icon class="size-full text-white" name={"fa-brands:instagram"} />
+                  </a>
+                </li>
+              </ul>
+
+              <button class="w-40 sm:w-44 h-16 md:w-36 md:h-12 lg:w-44 lg:h-20 bg-gradient-to-r from-blue-800 to-indigo-900 text-lg text-white font-bold rotate-12 md:rotate-6 md:p-2 transition duration-500 ease-in-out hover:border transform hover:-translate-y-1 hover:scale-110 hover:rotate-0 hover:rounded-md">
+                BUY RUDY
+              </button>
+            </div>
+    
+              <div
+                  class="h-1/2 text-white font-bold tracking-tighter text-lg sm:text-xl md:text-xl lg:text-2xl justify-center md:self-center md:my-auto md:mx-auto pt-10 md:mb-0"
+                >
+                  <p class="w-10/12 md:w-10/12 lg:w-8/12 self-center md:m-auto hidden md:block">
+                  Who is?<span class="text-primary"> Rudy</span> <br> Is a degen meme fuckr <span class="text-primary">$Rudy</span> ready to conquer the BNB Network.
+                  </p>
+              </div>
+          </div>
+
+          <div
+            id="logo"
+            class=" w-8/12 sm:w-6/12 md:w-10/12 lg:w-full align-bottom justify-center mx-auto sm:pb-0 sm:mb-0"
+          >
+            <Image
+              class="object-contain md:self-center"
+              src={heroImage}
+              widths={widths}
+              sizes={sizes}
+              loading="eager"
+              alt="$RUDY"
+            />
+          </div>
+        </div>
+      <!--Img mobile-sm -->
+      <div
+            id="logo"
+            class=" w-8/12 sm:w-6/12 md:w-9/12 align-bottom justify-center mx-auto sm:pb-0 sm:mb-0"
+          >
+            <Image
+              class="object-contain md:self-center md:hidden"
+              src={heroImage}
+              widths={widths}
+              sizes={sizes}
+              loading="eager"
+              alt="$RUDY"
+            />
+          </div>
   </div>
 </section>
 
@@ -60,16 +208,16 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
     }
 
     100% {
-      transform: translate3d(0, 30px, 0);
+      transform: translate3d(0px, 0px, 0);
     }
   }
 
-  #astronaut {
+  #logo {
     animation: float linear 2.5s infinite alternate;
   }
 
   @media (prefers-reduced-motion: reduce) {
-    #astronaut {
+    #logo {
       @apply animate-none;
     }
 
