--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,10 @@ import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
 import Showcase from "~/components/showcase.astro";
 import Splash from "~/components/splash.astro";
+import ContentSection from "~/components/content-section.astro";
 import "~/styles/index.css";
+import Biograph from "~/components/biograph.astro";
+import Sliderauth from "~/components/sliderauth.astro";
 
 const { generator, site } = Astro;
 const image = new URL("social.jpg", site);
@@ -61,14 +64,47 @@ const description =
   <body
     class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
   >
-    <Header />
+
     <Splash />
-    <div class="space-y-24 px-8 py-32">
-      <Intro />
-      <Features />
-      <Compatibility />
-      <Showcase />
-    </div>
+    <Intro />
+    <Features />
+    <ContentSection/>
+    <Biograph />
+    <Sliderauth/>
     <Footer />
-  </body>
+    <!--
+      <div class="space-y-24 px-8 py-32">
+        <Compatibility />
+      </div>
+     -->
+  </body> 
 </html>
+
+<style is:global>
+  @font-face {
+    font-family: "Permanent Marker", cursive;
+    src: url(/public/fonts/PermanentMarker-Regular.ttf) format("truetype");
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+  } 
+  @font-face {
+    font-family: "Bebas Neue", sans-serif;
+    src: url(/public/fonts/BebasNeue-Regular.ttf) format("truetype");
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+  } 
+
+  @font-face {
+    font-family: "Bebas Neue", sans-serif;
+    src: url(/public/fonts/GaMaamli-Regular.ttf) format("truetype");
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+  } 
+
+  h1, h2, h3, h4, article, p, a , div, button {
+    font-family: "Permanent Marker", cursive;
+  }
+</style>
